fixed issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,14 @@ body {
   overflow-x: hidden;
 }
 
-#pinContainer {
+.pin-container {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
 }
 
-#pinContainer .slide-container {
-  height: 100vh;
+.pin-container .slide-container {
+  height: 100%;
   position: absolute;
   display: flex;
 }
